#
# configure script for kftp
#
# $Id$
#


AC_INIT(ftp/main.c)
AC_CONFIG_HEADER(config.h)

# This may be overridden using --prefix=/usr to configure
AC_PREFIX_DEFAULT(/usr/athena)

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_CPP
AC_PROG_YACC

AC_PROG_INSTALL

AC_C_CROSS

AC_CACHE_VAL(krb_cv_ld_flags,
krb_cv_ld_flags="") dnl
LD_FLAGS="$krb_cv_ld_flags"
AC_SUBST(CFLAGS) dnl
AC_SUBST(LDFLAGS) dnl
AC_SUBST(LD_FLAGS) dnl

AC_CHECK_HEADERS(sys/select.h paths.h bsd/bsd.h sys/mman.h)

AC_FIND_FUNC(socket, socket)
AC_FIND_FUNC(gethostbyname, nsl)

AC_CHECK_FUNCS(setproctitle mmap)

AC_OUTPUT(Makefile common/Makefile ftp/Makefile ftpd/Makefile)
